# torchish

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cmake/: TorchishConfig.cmake.in
csrc/: api_macros.hpp  check_macros.hpp  torchish.cpp  torchish.hpp  version.cpp
csrc/cuda/: bitpack_cuda.cu  bitpack_cuda.hpp  bitunpack_cuda.cu  bitunpack_cuda.hpp  macros.hpp  raycast_cuda.cu  raycast_cuda.hpp  raycast_nb_cuda.cu  vector_f.cuh
test/: ncu-command.txt
torchish/: __init__.py  binmatmul.py  linalg.py  ops_placeholders.py  raycast.py  utils.py
torchish/ext/bin_matmul/: __init__.py  bitpack.cpp  bitpack.cu  bitpack.hpp  bitpack.py
torchish/ext/raycast/: __init__.py  raycast.cpp  raycast.cu  raycast.hpp  raycast.py  raycast_nb.cpp  raycast_nb.cu
torchish/ext/scatter/: atomics.cuh  extensions.hpp  index_info.cuh  macros.hpp  reducer.cuh  scatter.cpp  scatter.hpp  scatter.py  scatter_cuda.cu  utils.hpp
torchish/ext/scatter_minmax/: reducer.cuh  scatter_minmax.cu  scatter_minmax.hpp  scatter_minmax.py
torchish/jit/: README.md
torchish/jit/bitunpack/: __init__.py  bitunpack.cpp  bitunpack.cu  bitunpack.hpp  bitunpack.py
torchish/jit/example/: example.cpp  example.cu  example.hpp  example.py
torchish/jit/scatter/: extensions.hpp  index_info.cuh  macros.hpp  scatter_cuda.cu  scatter_cuda.hpp
torchish/jit/scatter_minmax/: scatter_minmax.cu
